RESOLVED FIXED Bug 113179
[Qt] REGRESSION(r146630): 8 text related test asserts on debug builds
https://bugs.webkit.org/show_bug.cgi?id=113179
Summary [Qt] REGRESSION(r146630): 8 text related test asserts on debug builds
Zoltan Arvai
Reported 2013-03-25 02:23:06 PDT
After r146630 8 test asserts on Qt debug bots: fast/canvas/2d.text.draw.fill.maxWidth.veryLarge.html fast/canvas/2d.text.draw.fill.maxWidth.negative.html fast/canvas/2d.text.draw.fill.maxWidth.verySmall.html fast/canvas/2d.text.draw.fill.maxWidth.gradient.html fast/text/word-space-with-kerning-3.html fast/text/word-space-with-kerning.html fast/text/word-space-with-kerning-2.html fast/ruby/modify-positioned-ruby-text-crash.html A build before the patch: http://build.webkit.sed.hu/results/x86-32%20Linux%20Qt%20Debug/r146629%20%2825003%29/results.html An other build after the patch: http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r146630%20%2828242%29/results.html An example, fast/canvas/2d.text.draw.fill.maxWidth.veryLarge.html: crash log for DumpRenderTree (pid 22094): STDOUT: <empty> STDERR: ASSERTION FAILED: i < m_len STDERR: /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/Source/WebCore/platform/graphics/TextRun.h(158) : UChar WebCore::TextRun::operator[](unsigned int) const STDERR: 1 0x7fce4d3f19e9 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xe189e9) [0x7fce4d3f19e9] STDERR: 2 0x7fce4d43695d /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xe5d95d) [0x7fce4d43695d] STDERR: 3 0x7fce4d436015 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xe5d015) [0x7fce4d436015] STDERR: 4 0x7fce4d3f2d9c /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xe19d9c) [0x7fce4d3f2d9c] STDERR: 5 0x7fce4d41c6c7 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xe436c7) [0x7fce4d41c6c7] STDERR: 6 0x7fce4d0cd792 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xaf4792) [0x7fce4d0cd792] STDERR: 7 0x7fce4d0ccd63 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0xaf3d63) [0x7fce4d0ccd63] STDERR: 8 0x7fce4dcb461f /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQt5WebKit.so.5(+0x16db61f) [0x7fce4dcb461f] STDERR: 9 0x7fcdf7fff0e5 [0x7fcdf7fff0e5]
Attachments
Patch (1.91 KB, patch)
2013-03-25 04:15 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-03-25 04:15:06 PDT
Jocelyn Turcotte
Comment 2 2013-03-25 06:04:17 PDT
Comment on attachment 194824 [details] Patch Wow OK, I didn't see that one either. Thanks for catching this Zoltan.
Allan Sandfeld Jensen
Comment 3 2013-03-25 06:09:27 PDT
Comment on attachment 194824 [details] Patch Clearing flags on attachment: 194824 Committed r146761: <http://trac.webkit.org/changeset/146761>
Allan Sandfeld Jensen
Comment 4 2013-03-25 06:09:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.