[Qt] REGRESSION(r146630): 8 text related test asserts on debug builds https://bugs.webkit.org/show_bug.cgi?id=113179

Reviewed by Jocelyn Turcotte.

Test if range.start is within the valid range before testing the value at that point.

* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::initFormatForTextLayout):

Canonical link: https://commits.webkit.org/131525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146761 268f45cc-cd09-0410-ab3c-d52691b4dbfc